# chaos

./: .env  .env.example  .gitignore  README.md  index.html  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh
app/: database.py  main.py  models.py
app/api/: attachments.py  chains.py  deps.py  messages.py  schemas.py  users.py  validation.py  websocket.py
app/repositories/: message_repository.py
chaos_messenger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
css/: styles.css
db/: audit.sql  genesis.sql  partitions.sql  tables.sql
js/: script.js
tests/: conftest.py  docker-compose.test.yml  run.sh  test_chain.py  test_crypto.py  test_database.py  test_models.py  test_repository.py  test_schema.py
